src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Outstanding_Balance1__c</fullName>
        <formula>Amount  - Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Balance1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <formula>Negotiated_Total_Amount__c   - Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance_incl_anticipated__c</fullName>
        <formula>Negotiated_Total_Amount__c   - Total_Payments__c - Anticipated_Payments__c+Refund_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Balance (minus anticipated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance_incl_anticpated1__c</fullName>
        <formula>Amount  - Total_Payments__c - Anticipated_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Balance (incl anticipated)1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Final_Date_Note__c</fullName>
        <description>Note describing why an override value is being used for this value</description>
        <label>Override Final Date Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Final_Date__c</fullName>
        <label>Override Final Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Override_Prosth_Date_Note__c</fullName>
        <description>Note describing why an override value is being used for this value</description>
        <label>Override Prosth Date Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Prosth_Date__c</fullName>
        <description>This field will be used to overwrite the value in the windent prosth date field for Deferred Revenue reporting.  Adding this to help with some old Windent cleanup issues</description>
        <label>Override Prosth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Override_Surgery_Date_Note__c</fullName>
        <description>Note describing why an override value is being used for this value</description>
        <label>Override Surgery Date Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Surgery_Date__c</fullName>
        <label>Override Surgery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Override_Windent_Padding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Causes the formula field that calculates the unique windent id, to ignore zero padding rules. This is in place to handle Windent anomalies.</description>
        <label>Override Windent Padding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Panopto__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Initials__c</fullName>
        <formula>left(  Account.FirstName ,1) + &apos; &apos; + left( Account.LastName ,1)</formula>
        <label>Patient Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <formula>IF( Negotiated_Total_Amount__c =  Total_Collected__c ,&quot;Paid in Full&quot;,
&quot;Partial Payment Received&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Cancel__c</fullName>
        <description>This field will populate when a start has been flagged for cancellation.</description>
        <label>Pending Cancel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preliminary_Treatment_Plan__c</fullName>
        <label>Preliminary Treatment Plan</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Implant</fullName>
                </value>
                <value>
                    <fullName>Multiple Implants</fullName>
                </value>
                <value>
                    <fullName>Multiple Implant Bridge</fullName>
                </value>
                <value>
                    <fullName>AO4 Upper</fullName>
                </value>
                <value>
                    <fullName>AO4 Lower</fullName>
                </value>
                <value>
                    <fullName>AO4 Edentulous Upper</fullName>
                </value>
                <value>
                    <fullName>AO4 Edentulous Lower</fullName>
                </value>
                <value>
                    <fullName>DBL AO4</fullName>
                </value>
                <value>
                    <fullName>DBL AO4 Edentulous</fullName>
                </value>
                <value>
                    <fullName>Upper Denture</fullName>
                </value>
                <value>
                    <fullName>Lower Denture</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Transitional DBL AO4</fullName>
                </value>
                <value>
                    <fullName>Lower Overdenture</fullName>
                </value>
                <value>
                    <fullName>Upper Overdenture</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Upper AO4</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Lower AO4</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Double AO4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promissory_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promissory Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prosth_Exam_Paid_Date__c</fullName>
        <description>Indicates when we collected a $1000 on this record. This date will be used as the official start date going forward. All records before the switch over will default this value to the createddate of the prosth exam record</description>
        <label>Prosth Exam Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prosth_Exam_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that we collected a $1000 dollars on the start record (the prosth exam has been paid)</description>
        <label>Prosth Exam Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prosth_Exam_Status__c</fullName>
        <formula>/*IF(ISPICKVAL( StageName ,&quot;Cancelled Not Rescheduled&quot;),&quot;Lost&quot;,&quot;Won&quot;)*/
CASE(StageName,
&quot;Scheduled&quot;,&quot;Scheduled&quot;,
&quot;Rescheduled&quot;,&quot;Rescheduled&quot;,
&quot;Completed&quot;,&quot;Complete&quot;,
&quot;Cancelled Not Rescheduled&quot;,&quot;Cancelled&quot;,
&quot;Paid In Full&quot;,&quot;Paid in Full&quot;,
&quot;Scheduled for Satellite&quot;,&quot;Scheduled&quot;,
&quot;Completed for Satellite&quot;,&quot;Complete&quot;,
&quot;Paid in Full Satellite&quot;,&quot;Paid In Full&quot;,
&quot;Closed Won&quot;,&quot;Scheduled&quot;,
&quot;Consult Completed&quot;,&quot;Cancelled&quot;,
&quot;Consult Prostho Exam Scheduled&quot;,&quot;Cancelled&quot;,
&quot;Consult Prostho Exam Completed&quot;,&quot;Scheduled&quot;,
&quot;Consult Scheduled&quot;,&quot;Cancelled&quot;,
&quot;Consult No Show&quot;,&quot;Cancelled&quot;,
&quot;Surgery Scheduled&quot;,&quot;Scheduled&quot;,
&quot;Consult Doctor Declined&quot;,&quot;Cancelled&quot;,
&quot;Prostho Exam Scheduled&quot;,&quot;Cancelled&quot;,
&quot;Prostho Exam Completed&quot;,&quot;Scheduled&quot;,
&quot;Medical Clearance&quot;,&quot;Cancelled&quot;,
&quot;PIF Surgery Scheduled&quot;,&quot;Scheduled&quot;,
&quot;Financing&quot;,&quot;Cancelled&quot;,
&quot;Medical Clearance Pending&quot;,&quot;Cancelled&quot;,
&quot;Arranging Financing&quot;,&quot;Cancelled&quot;,
&quot;Cancelled Not Scheduled&quot;,&quot;Cancelled&quot;,
&quot;Non Candidate&quot;,&quot;Cancelled&quot;,
&quot;Financing Difficulty&quot;,&quot;Cancelled&quot;,
&quot;Medical Clearance Approved&quot;,&quot;Cancelled&quot;,
&quot;PE Complete Not Moving Forward&quot;,&quot;Cancelled&quot;,
&quot;Negotiation/Review&quot;,&quot;Cancelled&quot;,
&quot;Proposal/Price Quote&quot;,&quot;Cancelled&quot;,
&quot;Perception Analysis&quot;,&quot;Cancelled&quot;,
&quot;Id. Decision Makers&quot;,&quot;Cancelled&quot;,
&quot;Value Proposition&quot;,&quot;Cancelled&quot;,
&quot;Needs Analysis&quot;,&quot;Cancelled&quot;,
&quot;Qualification&quot;,&quot;Cancelled&quot;,
&quot;Prospecting&quot;,&quot;Cancelled&quot;,
&quot;Closed Lost&quot;,&quot;Cancelled&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prosth Exam Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prostho_Exam_Scheduled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Prostho Exam Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Doctor_Name__c</fullName>
        <formula>Account.Referral_Doctor__r.First_Last__c</formula>
        <label>Referral Doctor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office_Address__c</fullName>
        <formula>if(!isnull(Account.Referral_Office__c), Account.Referral_Office__r.Street__c + BR() ,&apos;&apos;) + 
if(!isnull(Account.Referral_Office__c), Account.Referral_Office__r.City__c + &apos;, &apos; ,&apos;&apos;) + 
if(!isnull(Account.Referral_Office__c), Account.Referral_Office__r.State_Province__c + &apos; &apos; ,&apos;&apos;) + 
if(!isnull(Account.Referral_Office__c), Account.Referral_Office__r.Postal_Code__c ,&apos;&apos;)</formula>
        <label>Referral Office Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office_Contact__c</fullName>
        <formula>Account.Referral_Office__r.Primary_Contact_Name__c</formula>
        <label>Referral Office Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office_Name__c</fullName>
        <formula>Account.Referral_Office__r.Name</formula>
        <label>Referral Office Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office_Phone__c</fullName>
        <formula>Account.Referral_Office__r.Phone__c</formula>
        <label>Referral Office Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Track__c</fullName>
        <formula>TEXT(Account.Referral_Track__c)</formula>
        <label>Referral Track</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Date__c</fullName>
        <label>Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Payments__c</fullName>
        <label>Refund Payments</label>
        <summarizedField>CCPayment__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>CCPayment__c.Payment_Status_Formula__c</field>
            <operation>equals</operation>
            <value>Refunded</value>
        </summaryFilterItems>
        <summaryForeignKey>CCPayment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <label>Resolved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roll_Up_Center_Name__c</fullName>
        <formula>IF( ISBLANK( Exam_Center__c ) , Account.Center__r.Name, Exam_Center__r.Name)</formula>
        <label>Roll Up Center Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Center__c</fullName>
        <formula>IF( ISBLANK( Exam_Center__c ) , CASESAFEID(Account.Center__c), CASESAFEID(Exam_Center__c))</formula>
        <label>Roll Up Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satellite_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Satellite Center</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Opportunities (Satellite Center)</relationshipLabel>
        <relationshipName>Satellite_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment_Code__c</fullName>
        <description>LeadLife Segment Code</description>
        <label>Segment Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <label>Short Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageNameState__c</fullName>
        <label>StageNameState</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date at which Prostho Exam:Stage = Scheduled, and the Prostho Exam should be flagged as a Start.  Set via Workflow Rule.    Created by OpFocus for Center Reporting Dashboard project, Summer 2009</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If a Treatment Plan related to the Opportunity has a Treatment Option selected, this is set to match the Start Value of that Treatment Option. If the Treatment Option is removed, this value is set to zero. A workflow rule (in the Visual Process Builder) controls this.</description>
        <label>Start Value</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surgery_Date__c</fullName>
        <label>Surgery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surgery_Scheduled__c</fullName>
        <label>Surgery Scheduled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surgery_Status__c</fullName>
        <description>0 = This month
1 = future month
2 = past 
3 = undetermined</description>
        <formula>IF (ISNULL(Surgery_Date__c) , 3 , 
IF ( YEAR(Surgery_Date__c) &gt; YEAR(TODAY()),   
    1,
    IF (  YEAR(Surgery_Date__c) &lt; YEAR(TODAY()),   
         2,
         IF( Month(Surgery_Date__c) = MONTH(TODAY()) , 0, IF( Month(Surgery_Date__c) &gt; MONTH(TODAY()), 1, 2)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Surgery Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surgery_has_been_Rescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Surgery has been Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_from_Consult_Prosth_Schedule_Date__c</fullName>
        <formula>IF((DATEVALUE(CreatedDate)  - DATEVALUE(Account.CreatedDate)) &lt; 0,&quot;0-Scheduled Same Day&quot;,
IF(DATEVALUE(CreatedDate)   =  DATEVALUE(Account.CreatedDate), &quot;0-Scheduled Same Day&quot;,
IF((DATEVALUE(CreatedDate)  - DATEVALUE(Account.CreatedDate)) &lt; 8,&quot;1-Week&quot;,
IF((DATEVALUE(CreatedDate)  - DATEVALUE(Account.CreatedDate)) &lt; 15,&quot;2-Weeks&quot;,
&quot;More than 3 Weeks&quot;
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time from Consult &amp; Prosth Schedule Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Collected__c</fullName>
        <formula>Amount_Collected_at_Prostho_Exam__c +  Amount_Collected_at_Consult__c  +  Amount_Collected_Before_Surgery__c  +  Amount_Collected_Before_Final_Bridge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Net_Payments__c</fullName>
        <description>Payment amount minus fees - roll up of net collection amount</description>
        <label>Total Net Payments</label>
        <summarizedField>CCPayment__c.Net_Collection_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>CCPayment__c.Payment_Status_Formula__c</field>
            <operation>equals</operation>
            <value>Collected</value>
        </summaryFilterItems>
        <summaryForeignKey>CCPayment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Net_Payments_minus_gp__c</fullName>
        <formula>Total_Net_Payments__c - (Total_Net_Payments__c * if(ISNULL(GP_Fee_Rate__c ) ,0,GP_Fee_Rate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Payments minus gp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <label>Total Payments</label>
        <summarizedField>CCPayment__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>CCPayment__c.Payment_Status_Formula__c</field>
            <operation>equals</operation>
            <value>Collected</value>
        </summaryFilterItems>
        <summaryForeignKey>CCPayment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Treatment_Amount__c</fullName>
        <label>Total Treatment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Treatment_Added_at_Prostho_Exam__c</fullName>
        <label>Treatment Added at Prostho Exam</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Implant</fullName>
                </value>
                <value>
                    <fullName>Multiple Implants</fullName>
                </value>
                <value>
                    <fullName>Multiple Implant Bridge</fullName>
                </value>
                <value>
                    <fullName>AO4 Upper</fullName>
                </value>
                <value>
                    <fullName>AO4 Lower</fullName>
                </value>
                <value>
                    <fullName>AO4 Edentulous Upper</fullName>
                </value>
                <value>
                    <fullName>AO4 Edentulous Lower</fullName>
                </value>
                <value>
                    <fullName>DBL AO4</fullName>
                </value>
                <value>
                    <fullName>DBL AO4 Edentulous</fullName>
                </value>
                <value>
                    <fullName>Upper Denture</fullName>
                </value>
                <value>
                    <fullName>Lower Denture</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Upper AO4</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Lower AO4</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Double AO4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treatment_Amount__c</fullName>
        <label>Treatment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbalanced_Amount__c</fullName>
        <formula>Negotiated_Total_Amount__c   - Total_Payments__c - Anticipated_Payments__c+Refund_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unbalanced Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_Windent_ID__c</fullName>
        <description>Should evaluate to match windent patient_id field</description>
        <formula>/*if(isblank(Windent_Patient_Id__c),null,
   if(isblank( Exam_Center__c), Account.Center__r.Windent_Clinic_ID__c, Exam_Center__r.Windent_Clinic_ID__c)   + &apos;_&apos; + 
  if(len(Windent_Patient_Id__c) = 1, &apos;00000&apos; + Windent_Patient_Id__c,
    if(len(Windent_Patient_Id__c) = 2, &apos;0000&apos; + Windent_Patient_Id__c,
      if(len(Windent_Patient_Id__c) = 3, &apos;000&apos; + Windent_Patient_Id__c,
        if(len(Windent_Patient_Id__c) = 4, &apos;00&apos; + Windent_Patient_Id__c,
          if(len(Windent_Patient_Id__c) = 5, &apos;0&apos; + Windent_Patient_Id__c,Windent_Patient_Id__c)
        )
      )
    )
  )
)*/

if(isblank(Windent_Patient_Id__c),null,  
  if(isblank( Exam_Center__c), Account.Center__r.Windent_Clinic_ID__c,  Exam_Center__r.Windent_Clinic_ID__c) + &apos;_&apos; + 
  if( Override_Windent_Padding__c , Windent_Patient_Id__c,
    if(len(Windent_Patient_Id__c) = 1, &apos;00000&apos; + Windent_Patient_Id__c, 
      if(len(Windent_Patient_Id__c) = 2, &apos;0000&apos; + Windent_Patient_Id__c, 
        if(len(Windent_Patient_Id__c) = 3, &apos;000&apos; + Windent_Patient_Id__c, 
          if(len(Windent_Patient_Id__c) = 4, &apos;00&apos; + Windent_Patient_Id__c, 
            if(len(Windent_Patient_Id__c) = 5, &apos;0&apos; + Windent_Patient_Id__c,Windent_Patient_Id__c) 
          ) 
        ) 
      ) 
    )
  )
)</formula>
        <label>Unique Windent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upsell_Amount__c</fullName>
        <label>Upsell Amount</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Added_at_Prostho_Exam__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Valid_Date__c</fullName>
        <label>Valid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weeks_to_Surgery__c</fullName>
        <formula>(Surgery_Date__c - TODAY())/7</formula>
        <label>Weeks to Surgery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Windent_Final_Date__c</fullName>
        <description>Date of the most recent final apt for this patient (tied by unique patient id)</description>
        <label>Windent Final Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Windent_Last_Apt__c</fullName>
        <description>Date of the last apt in Windent for this patient (based on patient id)</description>
        <label>Windent Last Apt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Windent_Num_Apts__c</fullName>
        <description>The number of apts this patient has attended in Windent</description>
        <label>Windent Num Apts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Windent_Patient_Id__c</fullName>
        <label>Windent Patient Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Windent_Prosth_Date__c</fullName>
        <description>Date of the most recent prosth exam apt for this patient (tied by unique patient id)</description>
        <label>Windent Prosth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Windent_Surgery_Date__c</fullName>
        <description>Date of the most recent surgery apt for this patient (tied by unique patient id)</description>
        <label>Windent Surgery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>is_Minimum_Negotiated_Total_Amount__c</fullName>
        <formula>Negotiated_Total_Amount__c &gt;= 2500</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Minimum Negotiated Total Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Requirement_Met__c</fullName>
        <formula>if(Prosth_Exam_Paid_Date__c &gt;= DATE(2016, 7, 1), 
Prosth_Exam_Paid__c &amp;&amp; Has_Treatment_Option__c
, 
Prosth_Exam_Paid__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Requirement Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Valid_Start__c</fullName>
        <description>Indicates if the prosth exam record meets the start definition. negotiated_total_amount__c &gt;= 2500 and prosth_exam_paid__c = true</description>
        <formula>/*if(Negotiated_Total_Amount__c &gt;= 2500 &amp;&amp; Prosth_Exam_Paid__c,true,false)*/

is_Minimum_Negotiated_Total_Amount__c &amp;&amp; is_Requirement_Met__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is_Valid_Start?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>7/28/2009 12:00 AM</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>8/3/2009 12:00 AM</value>
        </filters>
        <label>dutton</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth_Modified</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Total_Treatment_Amount__c</columns>
        <columns>Preliminary_Treatment_Plan__c</columns>
        <columns>Prosth_Exam_Paid__c</columns>
        <columns>Current_Owner__c</columns>
        <columns>Call_Back__c</columns>
        <columns>Amount_Collected_at_Consult__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Prostho_Exam_Scheduled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>March 2018</label>
        <sharedTo>
            <group>Testing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DenverCurrentMonthScheduledPE</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Negotiated_Total_Amount__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>janelle,somin,chemenn,jennifer</value>
        </filters>
        <label>Denver Current Month Scheduled PE</label>
    </listViews>
    <listViews>
        <fullName>Kansas_City_Pros_Exams</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Completed_Stage__c</columns>
        <columns>Anticipated_Payments__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Negotiated_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>8/1/2009</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>blosser,elliott</value>
        </filters>
        <label>Kansas City Pros Exams</label>
        <sharedTo>
            <role>DirectorPatientEducationConsulting</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Minneapolis_Prost_Exam</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterThan</operation>
            <value>8/1/2010</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>smallwood,addington</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Scheduled,Rescheduled,Completed,Paid In Full</value>
        </filters>
        <label>Minneapolis Prost Exams</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Negotiated_Total_Amount__c</columns>
        <columns>Total_Payments__c</columns>
        <columns>Anticipated_Payments__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>afall</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2009</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>equals</operation>
            <value>Amy Hall</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Additional_Treatment_greater_than_zero</fullName>
        <active>true</active>
        <description>Ensure that the additional treatment amount is greater than or equal to 0. (no negative amounts)</description>
        <errorConditionFormula>Additional_Treatment_Amount__c &lt; 0  &amp;&amp; ($Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
        <errorMessage>Prost Exam Adjustment Amount can not be negative.  Please adjust and save the record.</errorMessage>
    </validationRules>
</CustomObject>